# MAG-VLAQ

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  compute_other_loss.py  datasets_ws.py  pyproject.toml  script.sh  test.py  train.py  util.py
configs/: base.yaml  kitti360.yaml  nuscenes.yaml
configs/exp/: baseline.yaml  kitti360_baseline.yaml  kitti360_baseline_vlaq.yaml  kitti360_baseline_vlaq_odecq.yaml  kitti360_baseline_vlaq_odecq_lora.yaml  kitti360_utonia_last1_bf16.yaml  kitti360_vlaq_odecq_disabled.yaml  kitti360_vlaq_odecq_mc_mlp.yaml  kitti360_vlaq_odecq_zero_bias.yaml  nuscenes_baseline_vlaq_odecq.yaml
configs/machines/: 4090.yaml  5080.yaml
datasets/: datasets_ws_kitti360.py  datasets_ws_nuscenes.py  kitti360_calib.py
docs/: Backbone.md  ODE.md
layers/: eca_block.py  lora.py  mlp_adapter.py  mulconv_adapter.py  pooling.py
lightning/: commons.py  script.sh  train.py
lightning/configs/: kitti360.yaml  nuscenes.yaml
lightning/configs/exp/: ablation_no_utonia.yaml  mm_dbvanilla2d.yaml
lightning/lit/: cli.py  datamodule.py  module.py
lit/: __init__.py  callbacks.py  cli.py  ddp_utils.py  module.py  optim.py
lit/losses/: __init__.py  retrieval.py  sca_loss.py
lit/models/: __init__.py  factory.py
models_baseline/: dbvanilla2d.py
network/: image_fe.py
network_mm/: chart.py  diff_block.py  fuse_block_toshallow.py  image_fe.py  mm.py  ode_cq.py  stage2fuse_blockadd.py  utonia_fe.py  vlaq.py
scripts/: convert_legacy_ckpt.py
src/mag_vlaq/data/: kitti360.py  legacy_ws.py  nuscenes.py
src/mag_vlaq/lightning/: logging_utils.py
src/mag_vlaq/losses/: pairwise.py
src/mag_vlaq/models/: modeldb.py  modelq.py
src/sca/data/: __init__.py  kitti360.py  legacy_ws.py  nuscenes.py
src/sca/lightning/: callbacks.py  cli.py  datamodule.py  module.py  optim.py  runtime.py  triplet_cache.py
src/sca/losses/: __init__.py
src/sca/models/: __init__.py  dbvanilla2d.py  mm.py
src/sca/models/layers/: pooling.py  (+1 more)
tests/: test_phase3_ode_cq.py
tools/: options.py
(+12 files in other folders)
